# trie-dictionary

./: README.md
dict-check/: dict-check.c
dict-editor/: dict-editor.c
dictionary/: CMakeLists.txt  dictionary.c  dictionary_test.c  io_test.c  io_utils.h  trie.c  trie.h  trie_test.c  word_list.c  word_list.h  word_list_test.c
gtk-editor/: extra.c
